<resources>
    <string name="app_name">CPU ID</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="device_model">Device Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="brand">Brand</string>
    <string name="device">Device</string>
    <string name="hardware">Hardware</string>
    <string name="board">Board</string>
    <string name="build_fingerprint">Build Fingerprint</string>
    <string name="main_operator">Main Operator</string>
    <string name="network_type">Network Type</string>
    <string name="device_type">Device Type</string>
</resources>