<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".DeviceFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_model"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/device_model_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_model"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/manufacturer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/brand_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/device_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/board"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/board_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/board"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardware"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hardware_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hardware"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_fingerprint"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fingerprint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_fingerprint"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_type"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/device_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_type"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_type"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/network_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_type"
        android:textColor="@color/textColor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_operator"
        android:textColor="@color/titleColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/operator_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_operator"
        android:textColor="@color/textColor" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightMedGray" />

</LinearLayout>